# agentic-data-scientist

./: .env.example  .gitignore  README.md  pyproject.toml
benchmarks/: README.md  tasks.yaml
benchmarks/fixtures/general/: gene_list.txt  sales_forecast.csv
configs/: llm_routing.yaml  llm_routing.yaml.example
configs/workflows/: README.md  bio.rnaseq.nfcore_deseq2.yaml  demo.smoke.local_args.yaml  demo.smoke.local_echo.yaml  finance.factor_backtest.remote.yaml
docs/: api_reference.cn.md  architecture.cn.md  cli_reference.cn.md  extending.cn.md  getting_started.cn.md  getting_started.md  innovation_os_development_plan.md  phase2_task_plan.md  planning_strategy_evolution.cn.md  planning_strategy_evolution.md  tools_configuration.cn.md  tools_configuration.md  开发思路0.txt  开发思路1.txt
reports/: benchmark_template.md
scientific-skills/geomaster/: SKILL.md
scientific-skills/imaging-data-commons/: SKILL.md
scientific-skills/imaging-data-commons/references/: digital_pathology_guide.md
scientific-skills/pdf/: SKILL.md
scientific-skills/pymc/: SKILL.md
scientific-skills/scientific-schematics/: SKILL.md  test_ai_generation.py
scientific-skills/timesfm-forecasting/: SKILL.md
scripts/: run_benchmark.py
src/agentic_data_scientist/: __init__.py
src/agentic_data_scientist/agents/: coding_backends.py  workflow_execution.py
tests/: conftest.py
tests/integration/: test_adk_workflow.py  test_claude_code.py
tests/unit/: test_abduction_operator.py  test_adk_reliability.py  test_agents.py  test_benchmark_evaluation.py  test_budget_controller.py  test_coding_backends.py  test_core_api.py  test_deep_verifier.py  test_execution_routing.py  test_history_store.py  test_innovation_memory.py  test_innovation_trigger.py  test_knowledge_constraints.py  test_llm_circuit_breaker.py  test_llm_config.py  test_llm_preflight.py  test_method_backtracker.py  test_method_card.py  test_method_critic.py  test_method_selector.py  test_model_routing.py  test_plan_learning.py  test_plan_selector.py  test_problem_framer.py  test_programmatic_verifier.py  test_skill_registry.py  test_stage_decomposer.py  test_state_contracts.py  test_task_router.py  test_triz_operator.py  test_workflow_execution_agent.py  test_workflow_executors.py  test_workflow_manifest.py  test_workflow_registry.py
(+74 files in other folders)
